v bump 0.1.6 added show_pileup to rna plots to allow only splicing to be shown

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# 0.1.6
+* moved color_mapping and fill_mapping to pre fetch
+* added show_pileup option to rna plots.
+
 # 0.1.5
 * splicing is properly not counted in tracks_RNA.SE
 
